--- a/auth-client/package.json
+++ b/auth-client/package.json
@@ -10,10 +10,12 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "nodemon": "^2.0.13"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
+    "start:nodemon": "nodemon --watch src src/app/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
